...
        android:layout_height="91dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="193dp"
        android:layout_marginBottom="37dp"
        android:scaleType="fitCenter"
        android:src="@drawable/artistas"
        app:layout_constraintBottom_toTopOf="@+id/btnListAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnListAlbum"
...
        android:layout_height="91dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="68dp"
        android:scaleType="fitCenter"
        android:src="@drawable/album"
        app:layout_constraintBottom_toTopOf="@+id/btnListColeccionista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListaArtistas"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnListColeccionista"
...
